Source/cmPolicies.h
@@ -393,7 +393,10 @@ class cmMakefile;
          3, 24, 0, cmPolicies::WARN)                                          \
   SELECT(POLICY, CMP0131,                                                     \
          "LINK_LIBRARIES supports the LINK_ONLY generator expression.", 3,    \
-         24, 0, cmPolicies::WARN)
+         24, 0, cmPolicies::WARN)                                             \
+  SELECT(POLICY, CMP0132,                                                     \
+         "Do not set compiler environment variables on first run", 3, 24, 0,  \
+         cmPolicies::WARN)
 
 #define CM_SELECT_ID(F, A1, A2, A3, A4, A5, A6) F(A1)
 #define CM_FOR_EACH_POLICY_ID(POLICY)                                         \
