Tests/RunCMake/CMP0132/CMP0132-NEW.cmake
@@ -1,0 +1,2 @@
+cmake_policy(SET CMP0132 NEW)
+include(CMP0132-Common.cmake)
