Tests/RunCMake/CMP0132/RunCMakeTest.cmake
@@ -1,0 +1,7 @@
+include(RunCMake)
+
+if(NOT CMAKE_GENERATOR_NO_COMPILER_ENV)
+  run_cmake(CMP0132-WARN)
+  run_cmake(CMP0132-OLD)
+  run_cmake(CMP0132-NEW)
+endif()
